Fixed final text block on interests page not finishing animation on mobile.

--- a/interest_style.css
+++ b/interest_style.css
@@ -129,6 +129,16 @@ p {
             filter: blur(5px);
         }
 
+        .text-fade-final {
+            opacity: 0;
+            transform: translateX(10%);
+            animation: fade-in linear forwards;
+            animation-timeline: view();
+            animation-range-start: entry;
+            animation-range-end: entry 120%;
+            filter: blur(5px);
+        }
+
         .project-image {
             display: block;
             margin: auto;
